# Brain_sliceer-

./: .gitignore  brain_tumor.ipynb  colab_train.ipynb  pyproject.toml  requirements.txt
Brain_sliceer--main/: brain_tumor.ipynb  colab_train.ipynb  utilities.py
Brain_sliceer--main/src/brain_tumor_pipeline/: data.py  predict.py  train.py
MRI Brain Tumor Segmentation Using ResUNet Deep Learning Architecture-20240926T110830Z-001/MRI Brain Tumor Segmentation Using ResUNet Deep Learning Architecture/: utilities.py
src/brain_tumor_pipeline/: __init__.py  config.py  metrics.py  model.py  models.py  train.py
